tests/NormalTests/paczka1/fuzzy1/82218875.err
Error in line 1: jG7VSfrxFj S669 57,4
Error in line 3: jG7VSfrxFj S183 83,2
Error in line 13: QaFW S131 41,5
Error in line 18: S183 S669 10,3
Error in line 30: QaFW S948 27,2
Error in line 27: jG7VSfrxFj S131 105,9
Error in line 39: jG7VSfrxFj S669 -1,7
